name:                haskell-experiments-cothings
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/aztecrex/haskell-experiments-cothings#readme
license:             PublicDomain
license-file:        LICENSE
author:              Greg Wiley
maintainer:          aztec.rex@jammm.com
copyright:           Public Domain
category:            Examples
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-experiments-cothings-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-experiments-cothings
  default-language:    Haskell2010

test-suite haskell-experiments-cothings-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-experiments-cothings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aztecrex/haskell-experiments-cothings
